--- a/app/src/main/res/drawable/bg.xml
+++ b/app/src/main/res/drawable/bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners
-        android:bottomLeftRadius="20dp"
-        android:bottomRightRadius="20dp" />
-    <solid android:color="@color/black"/>
+        android:topLeftRadius="40dp"
+        android:topRightRadius="40dp" />
+    <solid android:color="@color/white"/>
 </shape>
