--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -9,7 +9,8 @@
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
-       android:src="@drawable/bankbuilding"
+       android:src="@mipmap/ic_launcher_bank"
+       android:contentDescription="icon"
        />
 
 </FrameLayout>
