--- a/app/src/main/res/layout/item_bank_list.xml
+++ b/app/src/main/res/layout/item_bank_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -10,13 +11,10 @@
 <androidx.cardview.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="20dp"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
-    android:background="#F0E5CF"
     android:layout_marginTop="10dp"
-    app:cardBackgroundColor="@color/white"
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="true">
 
@@ -60,7 +58,7 @@
             android:layout_marginTop="15dp"
             android:fontFamily="sans-serif"
             android:text="@{viewData.dc_BANKA_SUBE}"
-            android:textColor="@color/black"
+            android:textColor="@color/navy"
             android:textSize="15sp"
             app:layout_constraintStart_toEndOf="@+id/img"
             app:layout_constraintTop_toTopOf="parent" />
