--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,9 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#4B6587</color>
+    <color name="navy">#4B6587</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#D1D1D1</color>
-    <color name="gray_1">#F7F7F7</color>
+    <color name="black">#000000</color>
+    <color name="beige">#F0E5CF</color>
 </resources>
